--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "php": ">=8.1",
         "psr/cache": ">= 3",
         "psr/simple-cache": ">= 3",
-        "inanepain/file": ">= 0.1.0"
+        "inanepain/stdlib": ">=0.1.5 || dev-master || dev-develop",
+        "inanepain/file": ">= 0.2.1 || dev-master || dev-develop"
     },
     "require-dev": {}
 }
